# seogi

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  config.json  install.sh  uninstall.sh
cli/: Cargo.toml
cli/src/: lib.rs  log_reader.rs  main.rs  metrics_reader.rs  models.rs
cli/src/adapter/: cycle_repo.rs  cycle_task_repo.rs  db.rs  error.rs  git.rs  hook_error.rs  log_repo.rs  mapper.rs  mod.rs  project_repo.rs  status_repo.rs  task_dependency_repo.rs  task_event_repo.rs  task_repo.rs  timing.rs  transcript.rs  workspace_repo.rs
cli/src/analyzers/: mod.rs  session_summary.rs
cli/src/commands/: analyze.rs  changelog.rs  mod.rs  report.rs
cli/src/domain/: cycle.rs  cycle_report.rs  error.rs  log.rs  metrics.rs  migrate.rs  mod.rs  project.rs  report.rs  status.rs  task.rs  task_metrics.rs  token_usage.rs  value.rs  workspace.rs
cli/src/entrypoint/: cycle.rs  mcp.rs  mod.rs  project.rs  task.rs
cli/src/workflow/: analyze.rs  changelog.rs  cycle.rs  cycle_report.rs  log_failure.rs  log_system.rs  log_tool.rs  migrate.rs  (+6 more)
cli/tests/: analyze_command_test.rs  analyze_test.rs  cycle_command_test.rs  feature_02_test.rs  feature_03_test.rs  feature_04_test.rs  feature_05_test.rs  feature_06_test.rs  feature_07_test.rs  feature_08_test.rs  feature_09_test.rs  mcp_bootstrap_test.rs  mcp_tools_test.rs  post_tool_failure_hook_test.rs  post_tool_hook_test.rs  project_command_test.rs  report_command_test.rs  report_test.rs  status_command_test.rs  system_events_hook_test.rs  task_command_test.rs  tool_timing_test.rs  workspace_command_test.rs
(+123 files in other folders)
